--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,3 +2,6 @@ node_modules
 # Keep environment variables out of version control
 .env
 build
+
+# good practice to include the gnerated
+src/generated
