--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "@types/express": "^4.17.21",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -7,5 +8,8 @@
   },
   "scripts": {
     "dev": "tsc && node build/index.js"
+  },
+  "devDependencies": {
+    "prisma": "^5.18.0"
   }
 }
