--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,14 @@
     "@types/express": "^4.17.21",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "scripts": {
-    "dev": "tsc && node build/index.js"
+    "start": "tsc && node build/index.js",
+    "dev" : "npx nodemon "
   },
   "devDependencies": {
     "prisma": "^5.18.0"
