--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "@types/express": "^4.17.21",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
@@ -11,7 +12,7 @@
   },
   "scripts": {
     "start": "tsc && node build/index.js",
-    "dev" : "npx nodemon "
+    "dev": "npx nodemon "
   },
   "devDependencies": {
     "prisma": "^5.18.0"
