--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.7.4",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.28",
+    "markdown": "^0.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
